--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,35 @@
+# ===========================
+# Server Configuration
+# ===========================
 server.port=9090
+
+# ===========================
+# Database Configuration
+# ===========================
+spring.datasource.url=jdbc:mysql://localhost:3306/leave_management_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===========================
+# Hibernate / JPA Configuration
+# ===========================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Dialect for MySQL
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# ===========================
+# Logging Level (Optional)
+# ===========================
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# ===========================
+# Thymeleaf Configuration (if used)
+# ===========================
+spring.thymeleaf.cache=false
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
